[package]
name = "lion"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]

[dependencies]
rust_decimal = "^0.9"

# TODO: Use the version on crates.io once it is published after Jun 11, 2018
nom_locate = { git = "https://github.com/fflorent/nom_locate" }

[dependencies.nom]
version = "^4.0.0"
features = ["verbose-errors"]

[dev-dependencies]
pretty_assertions = "0.5.1"
