[package]
name = "lion"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]

[dependencies]
rust_decimal = "0.10"
smallvec = "0.6"

[dependencies.nom]
version = "4.0.0"
features = ["verbose-errors"]

[dependencies.nom_locate]
version = "0.3.1"
features = ["verbose-errors"]

[dev-dependencies]
pretty_assertions = "0.5.1"
