[package]
name = "lion"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

[dependencies]
bigdecimal = "0.1"
smallvec = "0.6"
petgraph = "0.4"
num-traits = "0.2"
linefeed = "0.6"

[dependencies.nom]
version = "4.0.0"
features = ["verbose-errors"]

[dependencies.nom_locate]
version = "0.3.1"
features = ["verbose-errors"]

[dev-dependencies]
pretty_assertions = "0.6"
